# rust-poc-axum-ms

./: Cargo.toml
src/: main.rs
